# timelayer-agent-gate

./: AGENTS.md  AGENTS.ru.md  Cargo.toml  README.md  README.ru.md  ROADMAP.md  SECURITY.md  SPEC.md  SPEC.ru.md
.github/workflows/: ci.yml
crates/tl-gate-cli/: Cargo.toml
crates/tl-gate-cli/src/: main.rs
crates/tl-gate-core/: Cargo.toml
crates/tl-gate-core/src/: broker.rs  gate.rs  lib.rs  normalizer.rs  receipts.rs  wire.rs
crates/tl-gate-verifier-bridge/: Cargo.toml
crates/tl-gate-verifier-bridge/src/: lib.rs
examples/: intent.json
schemas/: TL-GATE-WIRE-v1.md  action-intent-v1.json  commitment-v1.json  execution-receipt-v1.json  final-receipt-v1.json  permission-receipt-v1.json  receipt-envelope-v1.json  scope-receipt-v1.json  tool-receipt-v1.json  validation-receipt-v1.json
testvectors/: check.py  intent-v1.json
